force-app/main/default/objects/Activity/fields/ActivityDateTime__c.field-meta.xml
<CustomField>
    <fullName>ActivityDateTime__c</fullName>
    <description>ActivityDateTime</description>
    <inlineHelpText>Date when the student did a request on EF.com or when it was entered manually in Salesforce.</inlineHelpText>
    <label>Activity Date Time</label>
    <type>DateTime</type>
</CustomField>