force-app/main/default/objects/Activity/fields/ApplicationFee__c.field-meta.xml
<CustomField>
    <fullName>ApplicationFee__c</fullName>
    <label>Application Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>