force-app/main/default/objects/Activity/fields/CallNotReachedType__c.field-meta.xml
<CustomField>
    <fullName>CallNotReachedType__c</fullName>
    <description>Select Sub Action if call not reached.</description>
    <label>Call Not Reached Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SalesAction__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Busy can’t talk</fullName>
            </value>
            <value>
                <fullName>Missing Number</fullName>
            </value>
            <value>
                <fullName>No Answer</fullName>
            </value>
            <value>
                <fullName>Not at Home</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>