force-app/main/default/objects/Activity/fields/CampaignName__c.field-meta.xml
<CustomField>
    <fullName>CampaignName__c</fullName>
    <label>Campaign Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>