force-app/main/default/objects/Activity/fields/CloseDate__c.field-meta.xml
<CustomField>
    <fullName>CloseDate__c</fullName>
    <description>Its the Closedate if Activity</description>
    <label>Close Date</label>
    <type>DateTime</type>
</CustomField>