force-app/main/default/objects/Activity/fields/ClosedBy__c.field-meta.xml
<CustomField>
    <fullName>ClosedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field captures the user who has closed it.</description>
    <label>Closed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>