force-app/main/default/objects/Activity/fields/CloseMainReason__c.field-meta.xml
<CustomField>
    <fullName>CloseMainReason__c</fullName>
    <label>Close Main Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Had no intention</fullName>
            </value>
            <value>
                <fullName>Lost to competitor</fullName>
            </value>
            <value>
                <fullName>Had intention and money, but chose to do something else</fullName>
            </value>
            <value>
                <fullName>Has no means</fullName>
            </value>
            <value>
                <fullName>Finds EF offer too expensive</fullName>
            </value>
            <value>
                <fullName>Had intention and money, but chose to do something else (soft no, we can try next year)</fullName>
                <isActive>false</isActive>
                <label>Had intention and money, but chose to do something else (soft no, we can try next year)</label>
            </value>
            <value>
                <fullName>Had no intention (ordered by mistake, didn't understand what it was for at all)</fullName>
                <isActive>false</isActive>
                <label>Had no intention (ordered by mistake, didn't understand what it was for at all)</label>
            </value>
            <value>
                <fullName>Lost to competitor (definitely try again)</fullName>
                <isActive>false</isActive>
                <label>Lost to competitor (definitely try again)</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>