force-app/main/default/objects/Activity/fields/CustomerRequest__c.field-meta.xml
<CustomField>
    <fullName>CustomerRequest__c</fullName>
    <description>Specifies which Task is Linked to which Customer Request on Task Record Level.</description>
    <formula>HYPERLINK("/"&amp; EventId__c , "Customer Request")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Request</label>
    <type>Text</type>
</CustomField>