force-app/main/default/objects/Activity/fields/DestinationCode__c.field-meta.xml
<CustomField>
    <fullName>DestinationCode__c</fullName>
    <label>Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>