force-app/main/default/objects/Activity/fields/DeviceType__c.field-meta.xml
<CustomField>
    <fullName>DeviceType__c</fullName>
    <label>Device Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>