force-app/main/default/objects/Activity/fields/EntryPointURL__c.field-meta.xml
<CustomField>
    <fullName>EntryPointURL__c</fullName>
    <description>This field is used to store the Entry Point Url of the Web Visit.</description>
    <label>Entry Point URL</label>
    <type>Url</type>
</CustomField>