force-app/main/default/objects/Activity/fields/EventId__c.field-meta.xml
<CustomField>
    <fullName>EventId__c</fullName>
    <description>Stores customer Request id in Task.</description>
    <label>EventId(Customer Request Id)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>