force-app/main/default/objects/Activity/fields/FalseBrochureProgramCodes__c.field-meta.xml
<CustomField>
    <fullName>FalseBrochureProgramCodes__c</fullName>
    <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
    <label>False Brochure Program Codes</label>
    <length>50</length>
    <type>Text</type>
</CustomField>