force-app/main/default/objects/Activity/fields/FollowUpDate__c.field-meta.xml
<CustomField>
    <fullName>FollowUpDate__c</fullName>
    <label>Follow-Up Date</label>
    <type>DateTime</type>
</CustomField>