force-app/main/default/objects/Activity/fields/FormSubmissionID__c.field-meta.xml
<CustomField>
    <fullName>FormSubmissionID__c</fullName>
    <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
    <label>Form Submission ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>