force-app/main/default/objects/Activity/fields/HasSeenPrice__c.field-meta.xml
<CustomField>
    <fullName>HasSeenPrice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates if the Customer has seen a price during the Web Visit.</description>
    <label>Has Seen Price</label>
    <type>Checkbox</type>
</CustomField>