force-app/main/default/objects/Activity/fields/HasSeenPromotion__c.field-meta.xml
<CustomField>
    <fullName>HasSeenPromotion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates if the customer has seen a promotion during the Web Visit.</description>
    <label>Has Seen Promotion</label>
    <type>Checkbox</type>
</CustomField>