force-app/main/default/objects/Activity/fields/InfoMeetingID__c.field-meta.xml
<CustomField>
    <fullName>InfoMeetingID__c</fullName>
    <label>Info Meeting ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>