force-app/main/default/objects/Activity/fields/IsEBrochure__c.field-meta.xml
<CustomField>
    <fullName>IsEBrochure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
    <label>Email Only</label>
    <type>Checkbox</type>
</CustomField>