force-app/main/default/objects/Activity/fields/IsExpressCall__c.field-meta.xml
<CustomField>
    <fullName>IsExpressCall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Express Call</label>
    <type>Checkbox</type>
</CustomField>