force-app/main/default/objects/Activity/fields/IsPaidOnline__c.field-meta.xml
<CustomField>
    <fullName>IsPaidOnline__c</fullName>
    <description>This field gets updated to 1, if WebOnlinePaymentTXLog_id > 0 otherwise 0</description>
    <formula>IF(WebOnlinePaymentTXLogId__c >0, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Paid Online</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>