force-app/main/default/objects/Activity/fields/IsTaskCallReached__c.field-meta.xml
<CustomField>
    <fullName>IsTaskCallReached__c</fullName>
    <description>Identifies if the Task resulted in Customer being Reached</description>
    <formula>ISPICKVAL( SalesAction__c ,'Call Reached') || 
ISPICKVAL( SalesAction__c ,'Called Us') || 
ISPICKVAL( SalesAction__c ,'Visited Us') || 
ISPICKVAL( SalesAction__c ,'Emailed Us') || 
ISPICKVAL( SalesAction__c ,'Social Media Reached')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Task Call Reached</label>
    <type>Checkbox</type>
</CustomField>