force-app/main/default/objects/Activity/fields/IsUp__c.field-meta.xml
<CustomField>
    <fullName>IsUp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is UP</label>
    <type>Checkbox</type>
</CustomField>