force-app/main/default/objects/Activity/fields/KeyWord__c.field-meta.xml
<CustomField>
    <fullName>KeyWord__c</fullName>
    <label>Key Word</label>
    <type>TextArea</type>
</CustomField>