force-app/main/default/objects/Activity/fields/LatestEntrySourceCode__c.field-meta.xml
<CustomField>
    <fullName>LatestEntrySourceCode__c</fullName>
    <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
    <label>Latest Entry Source Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>