force-app/main/default/objects/Activity/fields/LatestKeywords__c.field-meta.xml
<CustomField>
    <fullName>LatestKeywords__c</fullName>
    <label>Latest Keywords</label>
    <type>TextArea</type>
</CustomField>