force-app/main/default/objects/Activity/fields/MergeReason__c.field-meta.xml
<CustomField>
    <fullName>MergeReason__c</fullName>
    <label>Merge Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>