force-app/main/default/objects/Activity/fields/NextCallType__c.field-meta.xml
<CustomField>
    <fullName>NextCallType__c</fullName>
    <description>Used to select the Next calltype of the task</description>
    <label>Next Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>FUA</fullName>
                <label>Appointment</label>
            </value>
            <value>
                <fullName>Call</fullName>
                <isActive>false</isActive>
                <label>Call</label>
            </value>
            <value>
                <fullName>TCC</fullName>
                <label>Contact Customer</label>
            </value>
            <value>
                <fullName>FUP</fullName>
                <label>Follow-up</label>
            </value>
            <value>
                <fullName>MCR</fullName>
                <isActive>false</isActive>
                <label>MCR</label>
            </value>
            <value>
                <fullName>Meeting</fullName>
                <isActive>false</isActive>
                <label>Meeting</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>PTS</fullName>
                <isActive>false</isActive>
                <label>PTS</label>
            </value>
            <value>
                <fullName>SBR</fullName>
                <isActive>false</isActive>
                <label>SBR</label>
            </value>
            <value>
                <fullName>SPQ</fullName>
                <isActive>false</isActive>
                <label>SPQ</label>
            </value>
            <value>
                <fullName>UCC</fullName>
                <label>Unreached Customer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>