force-app/main/default/objects/Activity/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <description>This field is used to display right name of the Source using Source__c or SourceCodeAuto__c</description>
    <label>Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>