force-app/main/default/objects/Activity/fields/ProcessedForTaskCreation__c.field-meta.xml
<CustomField>
    <fullName>ProcessedForTaskCreation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be help full weather tasks are created for particular customer activity or not?</description>
    <label>Processed For Task Creation</label>
    <type>Checkbox</type>
</CustomField>