force-app/main/default/objects/Activity/fields/ReservedArticles__c.field-meta.xml
<CustomField>
    <fullName>ReservedArticles__c</fullName>
    <label>Reserved Articles</label>
    <type>TextArea</type>
</CustomField>