force-app/main/default/objects/Activity/fields/ResultType__c.field-meta.xml
<CustomField>
    <fullName>ResultType__c</fullName>
    <inlineHelpText>Enter Result Type for call logged in.</inlineHelpText>
    <label>Result Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SalesAction__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call back</fullName>
            </value>
            <value>
                <fullName>Call Appointment</fullName>
            </value>
            <value>
                <fullName>Visit</fullName>
            </value>
            <value>
                <fullName>Close</fullName>
            </value>
            <value>
                <fullName>Change Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>