force-app/main/default/objects/Activity/fields/SalesAction__c.field-meta.xml
<CustomField>
    <fullName>SalesAction__c</fullName>
    <label>Sales Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Called Us</fullName>
            </value>
            <value>
                <fullName>Call Not Reached</fullName>
            </value>
            <value>
                <fullName>Call Reached</fullName>
            </value>
            <value>
                <fullName>Emailed Us</fullName>
            </value>
            <value>
                <fullName>Sent Email</fullName>
            </value>
            <value>
                <fullName>Social Media Reached</fullName>
            </value>
            <value>
                <fullName>Social Media Sent</fullName>
            </value>
            <value>
                <fullName>Visited Us</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>