force-app/main/default/objects/Activity/fields/SalesOffice__c.field-meta.xml
<CustomField>
    <fullName>SalesOffice__c</fullName>
    <description>SalesOffice to which Lead/Opportunity belongs.</description>
    <label>SalesOffice</label>
    <length>50</length>
    <type>Text</type>
</CustomField>