force-app/main/default/objects/Activity/fields/SchoolName__c.field-meta.xml
<CustomField>
    <fullName>SchoolName__c</fullName>
    <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
    <label>School Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>