force-app/main/default/objects/Activity/fields/SentLabel__c.field-meta.xml
<CustomField>
    <fullName>SentLabel__c</fullName>
    <description>This is used to store the label value that has been attached when sending the brochure.</description>
    <label>Sent Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>