force-app/main/default/objects/Activity/fields/SentLetter__c.field-meta.xml
<CustomField>
    <fullName>SentLetter__c</fullName>
    <description>This field is used to store the Letter that was attached when sending the brochure.</description>
    <label>Sent Letter</label>
    <length>80</length>
    <type>Text</type>
</CustomField>