force-app/main/default/objects/Activity/fields/SourceCodeGroup__c.field-meta.xml
<CustomField>
    <fullName>SourceCodeGroup__c</fullName>
    <label>Source Code Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>