force-app/main/default/objects/Activity/fields/SurfTimeSeconds__c.field-meta.xml
<CustomField>
    <fullName>SurfTimeSeconds__c</fullName>
    <description>This field is used to display the Surf Time of the customer during the Web Visit (in seconds).</description>
    <label>Surf Time Seconds</label>
    <length>25</length>
    <type>Text</type>
</CustomField>