force-app/main/default/objects/Activity/fields/TaskResult__c.field-meta.xml
<CustomField>
    <fullName>TaskResult__c</fullName>
    <description>For SBR/SPQ Tasks captures the result of the Task</description>
    <label>Task Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sent Brochure</fullName>
            </value>
            <value>
                <fullName>Sent Quotation</fullName>
            </value>
            <value>
                <fullName>Will not Send Brochure</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>