force-app/main/default/objects/Activity/fields/TopDestination__c.field-meta.xml
<CustomField>
    <fullName>TopDestination__c</fullName>
    <description>This field represents the destination from the Web Visit Page where the customer spent the most time.</description>
    <label>Top Destination</label>
    <type>TextArea</type>
</CustomField>