force-app/main/default/objects/Activity/fields/TritonVisitId__c.field-meta.xml
<CustomField>
    <fullName>TritonVisitId__c</fullName>
    <description>This field stores the Triton Id of the specific Web Visit.</description>
    <label>Triton Visit Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>