force-app/main/default/objects/Activity/fields/WebOnlinePaymentTXLogId__c.field-meta.xml
<CustomField>
    <fullName>WebOnlinePaymentTXLogId__c</fullName>
    <description>S-8 created for mapping with the posiden fields for Lead Imports</description>
    <label>Web Online Payment TX Log ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>